Remove unnecessary things

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 *#
 __pycache__
 db.sqlite3
+local_settings.py
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
