yum packages for PostGIS

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -2,3 +2,8 @@ packages:
   yum:
     git: []
     postgresql93-devel: []
+    geos: []
+
+commands:
+  01_gdal:
+    command: "yum --enablerepo=epel -y install gdal"
