Final AWS configurations

--- a/.ebextensions/01-django_eb.config
+++ b/.ebextensions/01-django_eb.config
@@ -1,11 +1,21 @@
 option_settings:
   "aws:elasticbeanstalk:application:environment":
     DJANGO_SETTINGS_MODULE: "moziobackend.settings"
-    PYTHONPATH: "/opt/python/ondeck/app/moziobackend:$PYTHONPATH"
+    PYTHONPATH: "/opt/python/current/app/moziobackend:$PYTHONPATH"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: "moziobackend/moziobackend/wsgi.py"
+  "aws:elasticbeanstalk:container:python:staticfiles":
+    "/static/": "moziobackend/moziobackend/staticfiles/"
 
 container_commands:
   01_migrate:
-    command: "django-admin.py migrate"
+    command: "/opt/python/run/venv/bin/python /opt/python/ondeck/app/moziobackend/manage.py migrate"
+    leader_only: true
+
+  02_collectstatic:
+    command: "/opt/python/run/venv/bin/python /opt/python/ondeck/app/moziobackend/manage.py collectstatic --no-input"
+    leader_only: true
+
+  03_createsuperuser:
+    command: "/opt/python/run/venv/bin/python /opt/python/ondeck/app/moziobackend/manage.py createadminuser"
     leader_only: true
